# backend/api/helpers/helper.js
@@ -3,8 +3,16 @@
  */
 'use strict';
 
+const bunyan = require('bunyan');
+const log = bunyan.createLogger({name: 'klaxoon-bookmarks controller'});
+const dbHelper = require('../helpers/dbHelper');
+
 module.exports = {
   getBookmarks () {
-    return [];
+    return await dbHelper.findInDB('bookmarks', {})
+  }
+
+  getBookmark (id) {
+  	return 
   }
 };
